# django_excercises

./: .gitignore  manage.py  pyproject.toml
django_excercises/: asgi.py  settings.py  urls.py  wsgi.py
django_excercises/users/: admin.py  apps.py  models.py
django_excercises/users/migrations/: 0001_create_custom_user_with_profile.py
